# nativefiledialog

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
docs/: build.md  contributing.md  submitting_pull_requests.md
src/: .sconsign.dblite  SConstruct  common.h  ftg_core.h  nfd_cocoa.m  nfd_common.c  nfd_common.h  nfd_gtk.c  nfd_haiku.cpp  nfd_osx.m  nfd_qt.cpp  nfd_win.cpp  nfd_win_legacy.c  nfd_win_xp.c  nfd_zenity.c  simple_exec.h
src/include/: nfd.h
test/: .sconsign.dblite  SConstruct  dialog.c  nfd_test.c  test_opendialog.c  test_opendialog.cpp  test_opendialogmultiple.c  test_opendialogmultiple.cpp  test_pickfolder.c  test_savedialog.c  test_savedialog.cpp
